tests/NormalTests/paczka1/fuzzy1/47958572.err
Error in line 1: h4eJ A62 80,5
Error in line 4: NYHgEME S0 60,6
Error in line 6: NYHgEME S0 293,3
Error in line 2: YFx0K9nOtA S654 2,7
Error in line 12: UTy0 S0 91,1
Error in line 19: A62 S0 13,0
Error in line 28: UTy0 S0 313,4
Error in line 27: yPdbb6D A805 88,8
Error in line 35: YFx0K9nOtA S0 73,5
Error in line 39: YFx0K9nOtA S0 321,2
